--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,18 @@
-.centerDiv {
+.html {
+    min-width: 600px;
+}
+.zcenterDiv {
     width:500px;
     margin: 0 auto;
 }
 
+.mainGrid {
+    display: flex;
+    justify-content: space-around;
+}
+
 .gridContainer {
-    background: white;
+    background: black;
     margin: 0 auto;
     border: 10px solid #4d88ff;
     display: grid;
@@ -18,7 +26,15 @@
     padding: 1rem;
     font-size: 1rem;
     margin-bottom: 10px;
+    
 
+}
+
+.inputColor {
+    padding: 1.5rem;
+    border: solid grey;;
+    border-radius: 25%;
+    margin-bottom: 10px;
 }
 
 
@@ -27,6 +43,33 @@ body {
 }
 
 .sketchButtons {
-    margin-top: 40px;
     text-align: center;
 }
+
+.leftDiv {
+    margin-top: 30px;
+    font-family: 'Dancing Script', cursive;
+    height: 500px;
+    width: 250px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: white;
+    font-size: 75px;
+    
+}
+
+.rightDiv {
+    margin-top: 30px;
+    font-family: 'Dancing Script', cursive;
+    height: 500px;
+    width: 250px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: white;
+    font-size: 75px;
+
+}
+
+
