--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@
     border: 10px solid #4d88ff;
     display: grid;
     grid-template-columns: repeat(16, auto);
-    height: 500px;
+    height: 450px;
     width: 500px;
 }
 
@@ -70,6 +70,13 @@ body {
     color: white;
     font-size: 75px;
 
+}
+
+.author {
+    padding: 5px;
+    width:100%;
+    text-align: center;
+    color: rgb(230,230,230); 
 }
 
 
